--- a/project/Server/Makefile
+++ b/project/Server/Makefile
@@ -1,5 +1,6 @@
 # HOST_CXX ?= aarch64-linux-gnu-g++
 HOST_CXX ?= g++
+RM = rm -f
 
 BASELINE_SOURCES = baseline.cpp Chunk.cpp Dedup.cpp LZW.cpp ./common/Utilities.cpp
 BASELINE_OBJECTS =$(BASELINE_SOURCES:.cpp=.o)
@@ -21,4 +22,8 @@ $(DECODER_EXE): $(DECODER_OBJECTS)
 clean-baseline:
 	-$(RM) $(BASELINE_EXE) $(BASELINE_OBJECTS) 
 
-clean: clean-baseline
+clean-decoder:
+	-$(RM) $(DECODER_EXE) $(DECODER_OBJECTS) 
+
+clean: clean-baseline clean-decoder
+	-$(RM) *.bin decompressed.txt
