--- a/project/Server/Makefile
+++ b/project/Server/Makefile
@@ -2,13 +2,13 @@
 HOST_CXX ?= g++
 RM = rm -f
 
-BASELINE_SOURCES = baseline.cpp Chunk.cpp Dedup.cpp LZW.cpp ./common/Utilities.cpp ../Decoder/Decoder.cpp
+BASELINE_SOURCES = baseline.cpp Chunk.cpp Dedup.cpp LZW.cpp ./common/Utilities.cpp
 BASELINE_OBJECTS =$(BASELINE_SOURCES:.cpp=.o)
 BASELINE_EXE = baseline
 
-# DECODER_SOURCES = ../Decoder/Decoder.cpp
-# DECODER_OBJECTS =$(DECODER_SOURCES:.cpp=.o)
-# DECODER_EXE = decoder
+DECODER_SOURCES = ../Decoder/Decoder.cpp
+DECODER_OBJECTS =$(DECODER_SOURCES:.cpp=.o)
+DECODER_EXE = decoder
 
 ENDIAN_SOURCES = ./common/check_endian.cpp ./common/Utilities.cpp
 ENDIAN_OBJECTS =$(ENDIAN_SOURCES:.cpp=.o)
@@ -17,8 +17,8 @@ ENDIAN_EXE = endian
 $(BASELINE_EXE): $(BASELINE_OBJECTS)
 	$(HOST_CXX) -o "$@" $(+) $(LDFLAGS)
 
-# $(DECODER_EXE): $(DECODER_OBJECTS)
-# 	$(HOST_CXX) -o "$@" $(+) $(LDFLAGS)
+$(DECODER_EXE): $(DECODER_OBJECTS)
+	$(HOST_CXX) -o "$@" $(+) $(LDFLAGS)
 
 $(ENDIAN_EXE): $(ENDIAN_OBJECTS)
 	$(HOST_CXX) -o "$@" $(+) $(LDFLAGS)
@@ -29,8 +29,8 @@ $(ENDIAN_EXE): $(ENDIAN_OBJECTS)
 clean-baseline:
 	-$(RM) $(BASELINE_EXE) $(BASELINE_OBJECTS) 
 
-# clean-decoder:
-# 	-$(RM) $(DECODER_EXE) $(DECODER_OBJECTS) 
+clean-decoder:
+	-$(RM) $(DECODER_EXE) $(DECODER_OBJECTS) 
 
 clean-endian:
 	-$(RM) $(ENDIAN_EXE) $(ENDIAN_OBJECTS) 
