Baseline encoder version completed.

--- a/project/Server/Makefile
+++ b/project/Server/Makefile
@@ -55,5 +55,5 @@ clean-encoder:
 clean-endian:
 	-$(RM) $(ENDIAN_EXE) $(ENDIAN_OBJECTS) 
 
-clean: clean-baseline clean-endian clean-decoder clean-encoder clean-client
+clean: clean-baseline clean-endian clean-decoder clean-encoder 
 	-$(RM) *.bin decompressed
