--- a/project/Server/LZW_HW/.project
+++ b/project/Server/LZW_HW/.project
@@ -82,6 +82,11 @@
 			<location>/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server/stopwatch.h</location>
 		</link>
 		<link>
+			<name>source/test.txt</name>
+			<type>1</type>
+			<location>/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server/test.txt</location>
+		</link>
+		<link>
 			<name>testbench/baseline.cpp</name>
 			<type>1</type>
 			<location>/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server/baseline.cpp</location>
