ignore this change

--- a/project/Server_LZW_test/LZW_HW/.cproject
+++ b/project/Server_LZW_test/LZW_HW/.cproject
@@ -57,6 +57,8 @@
                                     									
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/include/ap_sysc"/>
                                     									
+                                    <listOptionValue builtIn="false" value="/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server_LZW_test"/>
+                                    									
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/include/etc"/>
                                     									
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/include"/>
@@ -92,6 +94,8 @@
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/lnx64/tools/systemc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/include/ap_sysc"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server_LZW_test"/>
                                     									
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/include/etc"/>
                                     									
@@ -259,6 +263,8 @@
                                     									
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/include/ap_sysc"/>
                                     									
+                                    <listOptionValue builtIn="false" value="/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server_LZW_test"/>
+                                    									
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/include/etc"/>
                                     									
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/include"/>
@@ -284,6 +290,8 @@
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/lnx64/tools/systemc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/include/ap_sysc"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="/mnt/castor/seas_home/c/chihan/chihan/ese532_project/project/Server_LZW_test"/>
                                     									
                                     <listOptionValue builtIn="false" value="/mnt/pollux/software/xilinx/2020.2/Vitis_HLS/2020.2/include/etc"/>
                                     									
