new changes for encoder encoder_multiQueue and single queue: for multi CU

--- a/project/Server_HW_optimized/u96_v2.cfg
+++ b/project/Server_HW_optimized/u96_v2.cfg
@@ -4,3 +4,16 @@ save-temps=1
 
 #[profile]
 #data=all:all:all
+
+[connectivity]
+nk = LZW_hybrid_hash_HW:2
+
+# sp = LZW_hybrid_hash_HW_1.in:HP1
+# sp = LZW_hybrid_hash_HW_1.input_length:HP1
+# sp = LZW_hybrid_hash_HW_1.send_data:HP1
+# sp = LZW_hybrid_hash_HW_1.output_length:HP1
+
+# sp = LZW_hybrid_hash_HW_2.in:HP0
+# sp = LZW_hybrid_hash_HW_2.input_length:HP0
+# sp = LZW_hybrid_hash_HW_2.send_data:HP0
+# sp = LZW_hybrid_hash_HW_2.output_length:HP0
