Changed the encoder of pipeline: 1. The total timer should start outside the pipeline and end outside the pipeline. 2. There should be sync between migrating data and kernel execution. If not, the first result might be correct and with higher speed. However, if run multiple times, the results will be wrong.

--- a/project/Server_HW_optimized/Makefile
+++ b/project/Server_HW_optimized/Makefile
@@ -80,7 +80,7 @@ package/sd_card.img: $(XCLBIN) xrt.ini
 	       --package.rootfs ${PLATFORM_REPO_PATHS}/sw/u96v2_sbc_base/PetaLinux/rootfs/rootfs.ext4 \
 	       --package.sd_file $(XCLBIN) \
 	       --package.sd_file xrt.ini 
-           --#package.sd_file $(ENCODER_EXE)\
+        #    --package.sd_file $(ENCODER_EXE)\
 
 
 clean-baseline:
