new encoder: Have segmentation fault when run using very large file

--- a/project/Demo/u96_v2.cfg
+++ b/project/Demo/u96_v2.cfg
@@ -32,3 +32,10 @@ sp = krnl_LZW_5.input:HP0
 sp = krnl_LZW_5.input_length:HP0
 sp = krnl_LZW_5.send_data:HP0
 sp = krnl_LZW_5.output_length:HP0
+
+[clock]
+id=6:krnl_LZW_1
+id=6:krnl_LZW_2
+id=6:krnl_LZW_3
+id=6:krnl_LZW_4
+id=6:krnl_LZW_5
